# plugin

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.complete  Dockerfile.fast  Dockerfile.minimal  Dockerfile.simple  Dockerfile.test  HiAgent_Plugin_Runtime_Guide.md  Makefile  README-Cross-Platform.md  README-Docker.md  README-Proxy-Fix.md  config-example.yaml  config.yaml  docker-compose-final.yml  docker-compose-simple.yml  docker-compose-x86.yml  docker-compose.yml  docker-config.yaml  fix-proxy.sh  gitconfig  local-config.yaml  main.py  pyproject.toml  readme.md  requirements.txt  scm_token.txt  start_service.py  worker.py
deploy/: deploy.sh  entrypoint.sh  (+1 more)
hiagent-plugin-sdk/: README.md  pyproject.toml
hiagent-plugin-sdk/hiagent_plugin_sdk/: __init__.py  abc.py  consts.py  llm.py  schema.py  utils.py  v1.py  v2.py
hiagent-plugin-sdk/hiagent_plugin_sdk/extensions/: __init__.py  openai_cfg.py  redis_cfg.py  storage_cfg.py
hiagent-plugin-sdk/tests/extensions/: test_extensions.py
plugins/hiagent-plugin-bingsearch/: pyproject.toml
plugins/hiagent-plugin-bingsearch/hiagent_plugin_bingsearch/: __init__.py
plugins/hiagent-plugin-bingsearch/tests/: test_pluigin.py
plugins/hiagent-plugin-duckduckgosearch/: pyproject.toml
plugins/hiagent-plugin-duckduckgosearch/hiagent_plugin_duckduckgosearch/: DuckDuckGoSearch_metadata.yaml  __init__.py
plugins/hiagent-plugin-duckduckgosearch/tests/: test_pluigin.py
plugins/hiagent-plugin-feishu/: pyproject.toml
plugins/hiagent-plugin-feishu-base/: pyproject.toml
plugins/hiagent-plugin-feishu-base/hiagent_plugin_feishu_base/: __init__.py  sdk_model.py  飞书多维表格_metadata.yaml
plugins/hiagent-plugin-feishu-base/tests/: test_pluigin.py
plugins/hiagent-plugin-feishu-docx/: pyproject.toml
plugins/hiagent-plugin-feishu-docx/hiagent_plugin_feishu_docx/: __init__.py  sdk_model.py  飞书云文档_metadata.yaml
plugins/hiagent-plugin-feishu-docx/tests/: test_pluigin.py
plugins/hiagent-plugin-feishu-message/: pyproject.toml
plugins/hiagent-plugin-feishu-message/hiagent_plugin_feishu_message/: __init__.py  sdk_model.py  飞书消息_metadata.yaml
plugins/hiagent-plugin-feishu-message/tests/: test_pluigin.py
plugins/hiagent-plugin-feishu-spreadsheet/: pyproject.toml
plugins/hiagent-plugin-feishu-spreadsheet/hiagent_plugin_feishu_spreadsheet/: __init__.py  add_rows_or_columns.py  sdk_model.py  value_range.py  飞书电子表格_metadata.yaml
plugins/hiagent-plugin-feishu-spreadsheet/tests/: test_pluigin.py
plugins/hiagent-plugin-feishu-task/: pyproject.toml
plugins/hiagent-plugin-feishu-task/hiagent_plugin_feishu_task/: __init__.py  sdk_model.py  飞书任务_metadata.yaml
plugins/hiagent-plugin-feishu-task/tests/: test_pluigin.py
plugins/hiagent-plugin-feishu/hiagent_plugin_feishu/: __init__.py  飞书_metadata.yaml
plugins/hiagent-plugin-feishu/tests/: test_pluigin.py
plugins/hiagent-plugin-firecrawl/: pyproject.toml
plugins/hiagent-plugin-firecrawl/hiagent_plugin_firecrawl/: Firecrawl_metadata.yaml  __init__.py  crawl.py  map.py  scrape.py
plugins/hiagent-plugin-firecrawl/tests/: test_plugin.py
plugins/hiagent-plugin-github-toolkit/: pyproject.toml
plugins/hiagent-plugin-github-toolkit/hiagent_plugin_github_toolkit/: GithubToolkit_metadata.yaml  __init__.py
plugins/hiagent-plugin-github-toolkit/tests/: test_plugin.py
plugins/hiagent-plugin-gitlab-toolkit/: pyproject.toml
plugins/hiagent-plugin-gitlab-toolkit/hiagent_plugin_gitlab_toolkit/: GitlabToolkit_metadata.yaml  __init__.py
plugins/hiagent-plugin-gitlab-toolkit/tests/: test_plugin.py
plugins/hiagent-plugin-jira-toolkit/: pyproject.toml
plugins/hiagent-plugin-jira-toolkit/hiagent_plugin_jira_toolkit/: JiraToolkit_metadata.yaml  __init__.py
plugins/hiagent-plugin-jira-toolkit/tests/: test_plugin.py
plugins/hiagent-plugin-json-process/: pyproject.toml
plugins/hiagent-plugin-json-process/hiagent_plugin_json_process/: __init__.py  json处理_metadata.yaml
plugins/hiagent-plugin-json-process/tests/: test_plugin.py
plugins/hiagent-plugin-json-toolkit/: pyproject.toml
plugins/hiagent-plugin-json-toolkit/hiagent_plugin_json_toolkit/: __init__.py  json工具_metadata.yaml
plugins/hiagent-plugin-json-toolkit/tests/: test_plugin.py
plugins/hiagent-plugin-kuaidiniao/: pyproject.toml
plugins/hiagent-plugin-kuaidiniao/hiagent_plugin_kuaidiniao/: __init__.py  express_query.py  快递鸟_metadata.yaml
plugins/hiagent-plugin-kuaidiniao/tests/: test_plugin.py
plugins/hiagent-plugin-maths/: pyproject.toml
plugins/hiagent-plugin-maths/hiagent_plugin_maths/: __init__.py  数学工具_metadata.yaml
plugins/hiagent-plugin-maths/tests/: test_plugin.py
plugins/hiagent-plugin-mojiweather/: pyproject.toml
plugins/hiagent-plugin-mojiweather/doc/: 国内+热门海外城市列表_V2_20240312.xlsx
plugins/hiagent-plugin-mojiweather/hiagent_plugin_mojiweather/: __init__.py  current.py  daily.py  墨迹天气_metadata.yaml
plugins/hiagent-plugin-mojiweather/scripts/: city_id_db.py
plugins/hiagent-plugin-mojiweather/tests/: current_resp.json  latest_40_resp.json  test_plugin.py
plugins/hiagent-plugin-notiontoolspec/: pyproject.toml
plugins/hiagent-plugin-notiontoolspec/hiagent_plugin_notiontoolspec/: NotionToolSpec_metadata.yaml  __init__.py
plugins/hiagent-plugin-notiontoolspec/tests/: test_pluigin.py
plugins/hiagent-plugin-qrcode/: pyproject.toml
plugins/hiagent-plugin-qrcode/hiagent_plugin_qrcode/: __init__.py  二维码工具_metadata.yaml
plugins/hiagent-plugin-qrcode/tests/: test_plugin.py
plugins/hiagent-plugin-regex/: pyproject.toml
plugins/hiagent-plugin-regex/hiagent_plugin_regex/: __init__.py  正则表达式提取_metadata.yaml
plugins/hiagent-plugin-regex/tests/: test_plugin.py
plugins/hiagent-plugin-salesforce/: pyproject.toml
plugins/hiagent-plugin-semantic-scholar/: pyproject.toml
plugins/hiagent-plugin-stackexchange/: pyproject.toml
plugins/hiagent-plugin-taopiaopiao/: pyproject.toml
plugins/hiagent-plugin-tianyancha/: pyproject.toml
plugins/hiagent-plugin-time/: pyproject.toml
plugins/hiagent-plugin-vectorizer-ai/: pyproject.toml
plugins/hiagent-plugin-volc-searchbot/: pyproject.toml
(+156 files in other folders)
