[tool.poetry]
name = "hiagent-plugin-sdk"
version = "0.1.1"
description = ""
authors = [
    "lujinghao <lujinghao@bytedance.com>",
]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
minio = "^7.2.10"
boto3 = "^1.35.68"
pydantic = "^2.10.2"
aiohttp = "^3.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
