[tool.poetry]
authors = []
name = "hiagent-plugin-feishu-spreadsheet"
version = "0.2.1"
description = ""
package-mode = true
include = [
  "hiagent_plugin_feishu_spreadsheet/icon.png",
  "hiagent_plugin_feishu_spreadsheet/*_metadata.yaml",
]

[tool.poetry.scripts]
gen_metadata = 'hiagent_plugin_feishu_spreadsheet:FeishuSpreadSheetPlugin._gen_metadata'

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
lark-oapi = "^1.4.3"
# hiagent_plugin_sdk = { path = "../../hiagent-plugin-sdk" }

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hiagent.plugins"]
"飞书电子表格" = "hiagent_plugin_feishu_spreadsheet:FeishuSpreadSheetPlugin"
