[tool.poetry]
authors = []
name = "hiagent-plugin-feishu"
version = "0.2.0"
description = ""
package-mode = true
include = [
    "hiagent_plugin_feishu/icon.png",
    "hiagent_plugin_feishu/*_metadata.yaml",
]

[tool.poetry.scripts]
gen_metadata = 'hiagent_plugin_feishu:FeishuPlugin._gen_metadata'

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
hiagent_plugin_sdk = { path = "../../hiagent-plugin-sdk" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hiagent.plugins"]
"飞书" = "hiagent_plugin_feishu:FeishuPlugin"
