[tool.poetry]
authors = []
name = "hiagent-plugin-maths"
version = "0.2.1"
description = ""
package-mode = true
include = [
    "hiagent_plugin_maths/icon.png",
    "hiagent_plugin_maths/*_metadata.yaml",
]

[tool.poetry.scripts]
gen_metadata = 'hiagent_plugin_maths:MathsPlugin._gen_metadata'

[tool.poetry.dependencies]
python = "^3.11"
numexpr = "^2.10.1"
# hiagent_plugin_sdk = { path = "../../hiagent-plugin-sdk" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hiagent.plugins"]
"数学工具" = "hiagent_plugin_maths:MathsPlugin"
