[tool.poetry]
authors = []
name = "hiagent-plugin-mojiweather"
version = "0.2.0"
description = ""
package-mode = true
include = [
    "hiagent_plugin_mojiweather/icon.png",
    "hiagent_plugin_mojiweather/city_id.db",
    "hiagent_plugin_mojiweather/*_metadata.yaml",
]

[tool.poetry.scripts]
gen_metadata = 'hiagent_plugin_mojiweather:MojiWeatherPlugin._gen_metadata'

[tool.poetry.dependencies]
# hiagent_plugin_sdk = { path = "../../hiagent-plugin-sdk" }
python = "^3.11"
aiohttp = "^3.11.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
types-openpyxl = "^3.1.5.20241126"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hiagent.plugins"]
"墨迹天气" = "hiagent_plugin_mojiweather:MojiWeatherPlugin"
