[tool.poetry]
name = "hiagent-plugin-qrcode"
version = "0.2.1"
description = ""
authors = ["lujinghao <lujinghao@bytedance.com>"]

include = [
    "hiagent_plugin_qrcode/icon.png",
    "hiagent_plugin_qrcode/*_metadata.yaml",
]

[tool.poetry.scripts]
gen_metadata = 'hiagent_plugin_qrcode:QRCodePlugin._gen_metadata'

[tool.poetry.dependencies]
python = "^3.11"
qrcode = "^8.0"
pypng = "^0.20220715.0"

[tool.poetry.group.dev.dependencies]
# hiagent_plugin_sdk = { path = "../../hiagent-plugin-sdk" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hiagent.plugins"]
"二维码工具" = "hiagent_plugin_qrcode:QRCodePlugin"
