[tool.poetry]
authors = []
name = "hiagent-plugin-tianyancha"
version = "0.2.2"
description = ""
package-mode = true
include = [
  "hiagent_plugin_tianyancha/icon.png",
  "hiagent_plugin_tianyancha/*_metadata.yaml",
]

[tool.poetry.scripts]
gen_metadata = 'hiagent_plugin_tianyancha:TianyanchaPlugin._gen_metadata'

[tool.poetry.dependencies]
# hiagent_plugin_sdk = { path = "../../hiagent-plugin-sdk" }
python = "^3.11"
aiohttp = "^3.11.2"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."hiagent.plugins"]
"天眼查" = "hiagent_plugin_tianyancha:TianyanchaPlugin"
